syntax = "proto3";
option go_package = "github.com/eugenshima/trading-service";

message Share {
    string share = 1;
    double price = 2;
}

message Position {
    string id = 1;
    bool isLong = 2;
    string shareName = 3;
    double sharePrice = 4;
    double total = 5;
    double shareAmount = 6;
    double stopLoss = 7;
    double takeProfit = 8;
}

service TradingService {
    rpc OpenPosition(OpenPositionRequest) returns (OpenPositionResponse);
    rpc ClosePosition(ClosePositionRequest) returns (ClosePositionResponse);
}

message OpenPositionRequest {
    Position position = 1;
}

message OpenPositionResponse {
    string ID = 1;
}

message ClosePositionRequest {
    string ID = 1;
}

message ClosePositionResponse{
    double PnL = 1;
}